<!--
  ~
  ~  Copyright © 2017-2019  Kynetics  LLC
  ~
  ~  All rights reserved. This program and the accompanying materials
  ~  are made available under the terms of the Eclipse Public License v1.0
  ~  which accompanies this distribution, and is available at
  ~  http://www.eclipse.org/legal/epl-v10.html
  ~
  -->

<resources>
    <string name="app_name">Update Factory ui client</string>
    <string name="download_title">New update available</string>
    <string name="download_content">New update is available to download.\nUpdates include new features, improvements and bug fixes.\nClick OK to download the update now.</string>
    <string name="update_title">Update Authorization</string>
    <string name="update_content">The upgrade is ready, click OK to upgrade now.\nThe device will be restarted during the upgrade process.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">@string/app_name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_settings">Settings</string>
    <string name="label_default_settings">Default Settings</string>
    <string name="label_log">Log</string>
    <string name="tenant">Tenant</string>
    <string name="controller_id">Controller ID</string>
    <string name="configure">Configure</string>
    <string name="uf_server_url">Update Factory server url</string>
    <string name="invalid_url">Invalid url</string>
    <string name="disconnected">Disconnected</string>
    <string name="ui_connected">UI is connected to Android Service</string>
    <string name="ui_version">UI version: %s</string>
    <string name="service_version">Service version: %s</string>
    <string name="nav_header_title">Update Factory</string>
    <string name="label_force_ping">Force ping</string>
    <string name="title_state_list">States</string>
    <string name="title_state_detail">State Detail</string>
    <string name="label_events">Events</string>
    <string name="details">Details</string>
    <string name="states_label">States</string>
    <string name="label_back">Back</string>
    <string name="service_disconnected">UI disconnected from service. Waiting for reconnection</string>

</resources>