<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~  Copyright © 2017-2019  Kynetics  LLC
  ~
  ~  All rights reserved. This program and the accompanying materials
  ~  are made available under the terms of the Eclipse Public License v1.0
  ~  which accompanies this distribution, and is available at
  ~  http://www.eclipse.org/legal/epl-v10.html
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/label_settings" />
        <item
            android:id="@+id/menu_log"
            android:icon="@drawable/ic_reorder_black_48dp"
            android:title="@string/label_log" />
        <item
            android:id="@+id/force_ping"
            android:icon="@drawable/baseline_sync_problem_black_48"
            android:title="@string/label_force_ping" />
    </group>

</menu>
